OAuth 用エンドポイント追加
